--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
             <strong><u>Lightning fast delivery</u></strong>
           </p>
         </div>
+        <div class="zip-container">
+          <p class="fast">See how fast you can get the item</p> 
+          <div class="zip">        
+            <img src="images/search-logo.jpg" class="search-icon">
+            <input id="zip-input" type="text" placeholder="        Zip Code">
+            <button class="check">Check</button> 
+          </div>          
+        </div>
+        <button class="pick-up">PICK UP IN STORE</button>
       <!--container ending -->
     </div>
   </body>
