--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
+    <div class="shadow"></div>
     <div class="container">
       <h1 class="heading">549, -</h1>
       <p class="payment">Pay now, later or split up.</p>
